Added: Event Handle, Service, Repo and Docs. Updated: Main and Docs
